--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: huytran1@illinois.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Website for AE 598-RL at the University of Illinois Urbana-Champaign.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://just-the-docs.github.io
+# url: https://just-the-docs.github.io
 url: "https://uiuc-ae598-rl-2023-spring.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  huytran1
