media space link

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,8 @@ aux_links:
     - "https://classroom.github.com/classrooms/119626151-uiuc-ae598-rl-2023-spring"
   "Gradescope":
     - "https://www.gradescope.com/courses/490472"
+  "Media Space":
+    - "https://mediaspace.illinois.edu/channel/AE+598+2023+Spring/286337372":
   # Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 # Collections for website data
